Fix sidebar items getting squashed
When the window height is small enough for the filters sidebar to have a
scroll bar.

--- a/src/gui/html/css/style.css
+++ b/src/gui/html/css/style.css
@@ -71,13 +71,13 @@ div[drawer] > iron-pages {
 #hiddenPlugins,
 #hiddenMessages {
     padding: 0 16px;
-    height: 48px;
+    min-height: 48px;
     line-height: 48px;
 }
 #contentFilter,
 #conflictsFilter {
     padding: 0 16px;
-    height: 64px;
+    min-height: 64px;
 }
 
 /* Panel */
